Оновлено головну сторінку для завантаження категорій з localStorage

--- a/index.html
+++ b/index.html
@@ -85,11 +85,9 @@
     <section id="menu" class="menu">
         <div class="container">
             <h2 class="section-title">Наше меню</h2>
-            <div class="menu-categories">
+            <div class="menu-categories" id="menu-categories">
                 <button class="category-btn active" data-category="all">Всі</button>
-                <button class="category-btn" data-category="bread">Хліб</button>
-                <button class="category-btn" data-category="pastry">Випічка</button>
-                <button class="category-btn" data-category="cakes">Торти</button>
+                <!-- Categories will be loaded here -->
             </div>
             <div class="menu-grid">
                 <div class="menu-item" data-category="bread">
