--- a/index.html
+++ b/index.html
@@ -17,20 +17,22 @@
         body {
             font-family: 'Inter', sans-serif;
             line-height: 1.6;
-            color: #333;
+            color: #4D372C;
+            background-color: #FDF5E6;
             overflow-x: hidden;
         }
 
         /* Header styles */
         .header {
-            background: linear-gradient(135deg, #8B7355 0%, #4D372C 100%);
-            color: white;
+            background: linear-gradient(135deg, #DBC2A6 0%, #8B7355 100%);
+            color: #4D372C;
             position: fixed;
             top: 0;
             left: 0;
             right: 0;
             z-index: 1000;
             transition: all 0.3s ease;
+            box-shadow: 0 2px 10px rgba(77, 55, 44, 0.1);
         }
 
         .navbar {
@@ -72,7 +74,7 @@
         }
 
         .nav-link {
-            color: white;
+            color: #4D372C;
             text-decoration: none;
             font-weight: 500;
             transition: all 0.3s ease;
@@ -82,18 +84,20 @@
         }
 
         .nav-link:hover {
-            background: rgba(255, 255, 255, 0.1);
+            background: rgba(77, 55, 44, 0.1);
             transform: translateY(-2px);
         }
 
         .auth-link {
-            background: rgba(255, 255, 255, 0.1);
-            border: 1px solid rgba(255, 255, 255, 0.2);
+            background: #8B7355;
+            color: white !important;
+            border: 1px solid #8B7355;
         }
 
         .admin-link {
-            background: #dc3545;
-            border: 1px solid #dc3545;
+            background: #4D372C;
+            color: white !important;
+            border: 1px solid #4D372C;
         }
 
         .hamburger {
@@ -192,7 +196,7 @@
         }
 
         .btn-primary {
-            background: linear-gradient(135deg, #28a745 0%, #20c997 100%);
+            background: linear-gradient(135deg, #8B7355 0%, #4D372C 100%);
             color: white;
         }
 
@@ -978,7 +982,7 @@
                 header.style.background = 'rgba(77, 55, 44, 0.95)';
                 header.style.backdropFilter = 'blur(10px)';
             } else {
-                header.style.background = 'linear-gradient(135deg, #8B7355 0%, #4D372C 100%)';
+                header.style.background = 'linear-gradient(135deg, #DBC2A6 0%, #8B7355 100%)';
                 header.style.backdropFilter = 'none';
             }
         });
@@ -1062,10 +1066,10 @@
             // Header scroll effect
             const header = document.querySelector('.header');
             if (window.scrollY > 100) {
-                header.style.background = 'rgba(77, 55, 44, 0.95)';
+                header.style.background = 'rgba(219, 194, 166, 0.95)';
                 header.style.backdropFilter = 'blur(10px)';
             } else {
-                header.style.background = 'linear-gradient(135deg, #8B7355 0%, #4D372C 100%)';
+                header.style.background = 'linear-gradient(135deg, #DBC2A6 0%, #8B7355 100%)';
                 header.style.backdropFilter = 'none';
             }
             ticking = false;
