Додано сторінки для очищення кешу та автоперенаправлення

--- a/simple-url.html
+++ b/simple-url.html
@@ -199,8 +199,19 @@
         </div>
         
         <div class="buttons">
-            <a href="bakery-main.html" class="btn btn-primary">
+            <a href="redirect.html" class="btn btn-primary">
                 <i class="fas fa-home"></i>
+                Нова версія (автоперенаправлення)
+            </a>
+            <a href="clear-cache.html" class="btn btn-secondary">
+                <i class="fas fa-broom"></i>
+                Очистити кеш
+            </a>
+        </div>
+        
+        <div class="buttons">
+            <a href="bakery-main.html" class="btn btn-secondary">
+                <i class="fas fa-star"></i>
                 Нова головна сторінка
             </a>
             <a href="admin.html" class="btn btn-secondary">
