Створено оригінальний дизайн з правильною темою пекарні

--- a/simple-url.html
+++ b/simple-url.html
@@ -210,10 +210,17 @@
         </div>
         
         <div class="buttons">
-            <a href="bakery-main.html" class="btn btn-secondary">
+            <a href="original-design.html" class="btn btn-secondary">
                 <i class="fas fa-star"></i>
-                Нова головна сторінка
+                Оригінальний дизайн
             </a>
+            <a href="bakery-main.html" class="btn btn-secondary">
+                <i class="fas fa-home"></i>
+                Нова версія
+            </a>
+        </div>
+        
+        <div class="buttons">
             <a href="admin.html" class="btn btn-secondary">
                 <i class="fas fa-cog"></i>
                 Адмін панель
