Додано сторінку для оновлення index.html з правильною темою

--- a/simple-url.html
+++ b/simple-url.html
@@ -199,9 +199,9 @@
         </div>
         
         <div class="buttons">
-            <a href="redirect.html" class="btn btn-primary">
+            <a href="update-index.html" class="btn btn-primary">
                 <i class="fas fa-home"></i>
-                Нова версія (автоперенаправлення)
+                index.html (з правильною темою)
             </a>
             <a href="clear-cache.html" class="btn btn-secondary">
                 <i class="fas fa-broom"></i>
