Додано налаштування для Netlify та інструкції

--- a/index.html
+++ b/index.html
@@ -717,18 +717,8 @@
                     <li><a href="#about" class="nav-link">Про нас</a></li>
                     <li><a href="#menu" class="nav-link">Меню</a></li>
                     <li><a href="#contact" class="nav-link">Контакти</a></li>
-                    <li><a href="auth.html" class="nav-link auth-link" id="auth-link">Увійти</a></li>
-                    <li><a href="quick-upload.html" class="nav-link">⚡ Швидко завантажити</a></li>
-                    <li><a href="upload-photos.html" class="nav-link">📸 Завантажити фото</a></li>
-                    <li><a href="photo-guide.html" class="nav-link">📖 Інструкція</a></li>
-                    <li><a href="fix-broken-images.html" class="nav-link">🔧 Виправити зображення</a></li>
-                    <li><a href="force-refresh.html" class="nav-link">🔄 Оновити кеш</a></li>
-                    <li><a href="responsive-demo.html" class="nav-link">📱 Адаптивність</a></li>
-                    <li><a href="check-links.html" class="nav-link">🔗 Перевірка посилань</a></li>
-                    <li><a href="sync-data.html" class="nav-link">🔄 Синхронізація</a></li>
-                    <li><a href="diagnose-links.html" class="nav-link">🔍 Діагностика</a></li>
-                    <li><a href="auto-sync.html" class="nav-link">🔄 Автосинхронізація</a></li>
-                    <li><a href="admin-login.html" class="nav-link admin-link">Адмін</a></li>
+                    <li><a href="auth.html" class="nav-link auth-link">Увійти</a></li>
+                    <li><a href="admin.html" class="nav-link admin-link">Адмін</a></li>
                 </ul>
                 <div class="hamburger">
                     <span class="bar"></span>
