Створено спеціальну адмін-панель для Netlify з завантаженням фото

--- a/index.html
+++ b/index.html
@@ -718,7 +718,8 @@
                     <li><a href="#menu" class="nav-link">Меню</a></li>
                     <li><a href="#contact" class="nav-link">Контакти</a></li>
                     <li><a href="auth.html" class="nav-link auth-link">Увійти</a></li>
-                    <li><a href="admin.html" class="nav-link admin-link">Адмін</a></li>
+                    <li><a href="netlify-admin.html" class="nav-link admin-link">Адмін (Netlify)</a></li>
+                    <li><a href="admin.html" class="nav-link admin-link">Адмін (GitHub)</a></li>
                 </ul>
                 <div class="hamburger">
                     <span class="bar"></span>
